Fixing PMD issues and refactoring exception usage